--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,4 +1,4 @@
 <link rel="shortcut icon" type="image/x-icon" href="/Hahn/favicon.ico">
 <script defer>
-    document.queryselector('h1').remove();
+    document.querySelector('h1').remove();
 </script>
