--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,4 +1,6 @@
 <link rel="shortcut icon" type="image/x-icon" href="/Hahn/favicon.ico">
-<script defer>
-    document.querySelector('h1').remove();
+<script>
+    window.onload = () => {
+        document.querySelector('h1').remove();
+    }
 </script>
