--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,6 +1,4 @@
 <link rel="shortcut icon" type="image/x-icon" href="/Hahn/favicon.ico">
-<script>
-    window.onload = () => {
-        document.querySelector('h1').remove();
-    }
+<script type="module">
+  document.querySelector('h1')?.remove();
 </script>
